examples/invalid/52_double_literal_overflow.lane
module Examples.Invalid.DoubleLiteralOverflow

pub let bad : Double = 1e309
